# bb-auction

./: Cargo.toml  README.md
auction-core/: Cargo.toml  build.rs
auction-core/proto/: auction.proto
auction-core/src/: bidder.rs  brandt.rs  broadcast.rs  channel.rs  elgamal.rs  error.rs  lib.rs  proof.rs  rate.rs  seller.rs  serde.rs  types.rs
auction-core/tests/: grpc_flow.rs
