[package]
name = "auction-core"
version = "0.1.0"
edition = "2024"

[dependencies]
elastic-elgamal = { version = "0.3.1", features = ["serde"] }
k256 = { version = "0.13.4", features = ["serde", "schnorr"] }
rand = "0.8"
rand_core = "0.6"
serde = { version = "1.0" , features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.38" , features = [
  "rt-multi-thread", "macros", "time", "sync", "signal", "net", "io-util"
] }
tokio-stream = { version = "0.1", features = ["sync"] }
sha2 = "0.10"
async-trait = "0.1"
num-traits = "0.2"
bincode = "2.0.1"
tonic = { version = "0.11", features = ["transport"] }
prost = "0.12"

[build-dependencies]
tonic-build = "0.11"
